tests/NormalTests/paczka1/fuzzy1/85411296.err
Error in line 1: T3dvk5p A327 60,4
Error in line 6: A79 A79 31,5
Error in line 4: FwayYEGdN A570 53,9
Error in line 7: A79 S115 80,2
Error in line 15: FwayYEGdN S115 28,5
Error in line 27: A79 A570 342,6
Error in line 30: FwayYEGdN A79 436,17
Error in line 23: R2K A327 14,1
Error in line 35: 3yRY A79 56,7
Error in line 29: Nk2d S115 41,9
